-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u40
-
Component/s: hotspot
-
b18
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8067537 | 8u45 | Vladimir Kozlov | P2 | Resolved | Fixed | b01 |
| JDK-8070925 | emb-8u47 | Vladimir Kozlov | P2 | Resolved | Fixed | team |
| JDK-8072225 | 7u85 | Vladimir Kozlov | P2 | Resolved | Fixed | b01 |
| JDK-8066832 | 7u80 | Vladimir Kozlov | P2 | Closed | Fixed | b04 |
The code in ifg.cpp is very different in 8u40. I prepared and pushed backport which is incorrect:
http://cr.openjdk.java.net/~kvn/8065618_8u/webrev/
In jdk9 the new code returns 'false' from separate method. In jdk8u there is no such method and corresponding code is inlined into build_ifg_physical().
The new code in 8u backport should not return but instead should guard the execution of the following code.
http://cr.openjdk.java.net/~kvn/8065618_8u/webrev/
In jdk9 the new code returns 'false' from separate method. In jdk8u there is no such method and corresponding code is inlined into build_ifg_physical().
The new code in 8u backport should not return but instead should guard the execution of the following code.
- backported by
-
JDK-8067537 8u backport for 8065618 is incorrect
-
- Resolved
-
-
JDK-8070925 8u backport for 8065618 is incorrect
-
- Resolved
-
-
JDK-8072225 8u backport for 8065618 is incorrect
-
- Resolved
-
-
JDK-8066832 8u backport for 8065618 is incorrect
-
- Closed
-
- relates to
-
JDK-8065618 C2 RA incorrectly removes kill projections
-
- Resolved
-