src/share/vm/opto/ifg.cpp
@@ -571,6 +571,7 @@ uint PhaseChaitin::build_ifg_physical( ResourceArea *a ) {
           if( !n->is_Proj() ||
               // Could also be a flags-projection of a dead ADD or such.
               (n2lidx(def) && !liveout.member(n2lidx(def)) ) ) {
+            bool remove = true;
             if (n->is_MachProj()) {
               // Don't remove KILL projections if their "defining" nodes have
               // memory effects (have SCMemProj projection node) -
@@ -583,19 +584,22 @@ uint PhaseChaitin::build_ifg_physical( ResourceArea *a ) {
               for (uint i = 0; i < cnt; i++) {
                 Node* proj = def->raw_out(i);
                 if (proj->Opcode() == Op_SCMemProj) {
-                  return false;
+                  remove = false;
+                  break;
                 }
               }
             }
-            b->_nodes.remove(j - 1);
-            if( lrgs(r)._def == n ) lrgs(r)._def = 0;
-            n->disconnect_inputs(NULL, C);
-            _cfg._bbs.map(n->_idx,NULL);
-            n->replace_by(C->top());
-            // Since yanking a Node from block, high pressure moves up one
-            hrp_index[0]--;
-            hrp_index[1]--;
-            continue;
+            if (remove) {
+              b->_nodes.remove(j - 1);
+              if( lrgs(r)._def == n ) lrgs(r)._def = 0;
+              n->disconnect_inputs(NULL, C);
+              _cfg._bbs.map(n->_idx,NULL);
+              n->replace_by(C->top());
+              // Since yanking a Node from block, high pressure moves up one
+              hrp_index[0]--;
+              hrp_index[1]--;
+              continue;
+            }
           }
 
           // Fat-projections kill many registers which cannot be used to
